--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -21,19 +21,35 @@
     android:key="my_device_info_pref_screen"
     android:title="@string/about_settings">
 
+    <!-- SigmaDroid info -->
     <com.android.settingslib.widget.LayoutPreference
-        android:key="device_name"
-        android:order="-1"
-        android:selectable="false"
-        android:layout="@layout/device_info_header"
-        settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
-        settings:isPreferenceVisible="false" />
+            android:key="sigma_info"
+            android:layout="@layout/sigma_info"
+            android:order="-2"
+            android:selectable="false" />
 
     <PreferenceCategory
         android:key="basic_info_category"
-        android:order="0"
+        android:order="-1"
         android:selectable="false"
         android:title="@string/my_device_info_basic_info_category_title">
+
+        <Preference
+            android:key="rom_build_status"
+            android:title="@string/build_status"
+            android:summary="@string/build_status_summary_placeholder"
+            settings:enableCopying="true"
+            android:order="0"
+            android:selectable="true"/>
+
+         <!-- Device name -->
+        <com.android.settings.widget.ValidatedEditTextPreference
+            android:key="device_name"
+            android:order="1"
+            android:title="@string/my_device_info_device_name_preference_title"
+            android:summary="@string/summary_placeholder"
+            settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
+            settings:enableCopying="true"/>
 
         <!-- Account name -->
         <Preference
