fix upstream mergefail
Signed-off-by: Matt Filetto <matt.filetto@gmail.com>

--- a/res/layout/hide_developer_status_layout.xml
+++ b/res/layout/hide_developer_status_layout.xml
@@ -21,19 +21,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/apps_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="24dp">
+        android:layout_height="wrap_content" />
 
-         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:scaleType="fitCenter"
-            android:layout_marginTop="80dp"
-            android:layout_marginBottom="30dp"
-            android:src="@drawable/alphabet_header" />
-
-    </LinearLayout>
 </FrameLayout>
