--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -119,15 +119,41 @@
             settings:enableCopying="true"
             settings:isPreferenceVisible="@bool/config_show_sim_info"
             settings:controller="com.android.settings.deviceinfo.imei.ImeiInfoPreferenceController"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="firmware_detail_category"
+        android:selectable="false"
+        android:title="@string/my_device_info_firmware_details_category_title">
 
         <!-- Android version -->
         <Preference
             android:key="firmware_version"
-            android:order="42"
             android:title="@string/firmware_version"
             android:summary="@string/summary_placeholder"
-            android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
             settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
+
+            <!-- Security patch -->
+         <Preference
+            android:key="selinux_status"
+            android:title="@string/selinux_status"
+            android:summary="@string/summary_placeholder"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.SELinuxStatusPreferenceController.java."/>
+
+        <!-- Baseband -->
+        <Preference
+            android:key="base_band"
+            android:title="@string/baseband_version"
+            android:summary="@string/summary_placeholder"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.BasebandVersionPreferenceController"/>
+
+        <!-- Kernel -->
+        <Preference
+            android:key="kernel_version"
+            android:title="@string/kernel_version"
+            android:summary="@string/summary_placeholder"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
