--- a/res/drawable/custom_preference_background.xml
+++ b/res/drawable/custom_preference_background.xml
@@ -15,17 +15,17 @@
     <item android:id="@android:id/mask">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <solid android:color="#FFFFFFFF"/>
-            <corners android:bottomRightRadius="33dp" android:bottomLeftRadius="33dp" 
-                android:topLeftRadius="33dp" android:topRightRadius="33dp"/> 
+            <corners android:bottomRightRadius="22dp" android:bottomLeftRadius="22dp" 
+                android:topLeftRadius="22dp" android:topRightRadius="22dp"/> 
         </shape>
     </item>
     <item android:id="@android:id/background">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
 
-            <solid android:color="@color/user_crd_bg" />
-            <corners android:bottomRightRadius="33dp" android:bottomLeftRadius="33dp" 
-                android:topLeftRadius="33dp" android:topRightRadius="33dp"/> 
+            <solid android:color="@color/dot_pref_color" />
+            <corners android:bottomRightRadius="22dp" android:bottomLeftRadius="22dp" 
+                android:topLeftRadius="22dp" android:topRightRadius="22dp"/> 
         </shape>
     </item>
 </ripple>
