--- a/res/drawable/sigma_preference_top_background_card.xml
+++ b/res/drawable/sigma_preference_top_background_card.xml
@@ -11,7 +11,7 @@
      limitations under the License.
 -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="?android:attr/colorControlHighlight">
+        android:color="@color/dot_pref_ripple">
     <item android:id="@android:id/mask">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <solid android:color="#FFFFFFFF"/>
@@ -23,7 +23,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
 
-            <solid android:color="@color/user_crd_bg" />
+            <solid android:color="@color/dot_pref_color" />
             <corners android:bottomRightRadius="0dp" android:bottomLeftRadius="0dp" 
                 android:topLeftRadius="22dp" android:topRightRadius="22dp"/> 
         </shape>
