--- a/res/layout/about_device_info.xml
+++ b/res/layout/about_device_info.xml
@@ -4,85 +4,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:weightSum="2">
-
-    <LinearLayout
-        android:id="@+id/firmware_details"
-        android:layout_width="0dp"
-        android:layout_height="164dp"
-        android:layout_weight="1.2"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="24dp"
-        android:orientation="vertical"
-        android:clickable="true"
-        android:clipToOutline="true"
-        android:background="@drawable/custom_preference_background">
-
-        <RelativeLayout
-            android:id="@+id/firmware_details_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/firmware_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                style="@style/op_control_text_style_h6"
-                android:textColor="@color/op_control_text_color_primary"
-                android:text="@string/firmware_name_text"
-                android:textSize="18sp"
-                android:layout_marginStart="20dp"
-                android:layout_alignParentTop="true" />
-
-            <TextView
-                android:id="@+id/firmware_version"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/firmware_name"
-                android:layout_marginTop="2dp"
-                style="@style/op_control_text_style_h6"
-                android:textColor="@color/op_control_text_color_secondary"
-                android:textSize="13sp"
-                android:layout_marginStart="20dp"/>
-
-            <TextView
-                android:id="@+id/firmware_build_summary"
-                style="@style/op_control_text_style_h6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:text="@string/firmware_build_summary_title"
-                android:textSize="13sp"
-                android:textStyle="bold|italic"
-                android:textColor="@color/op_control_text_color_primary"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="24dp"
-                android:layout_alignParentBottom="true"/>
-    
-        </RelativeLayout>
-
-    </LinearLayout>
+    android:visibility="gone"
+    android:orientation="horizontal">
 
     <RelativeLayout
-        android:id="@+id/build_variant"
-        android:layout_width="0dp"
-        android:layout_height="170dp"
-        android:layout_toRightOf="@+id/firmware_details"
-        android:layout_weight="0.8"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/custom_preference_background"
-        android:orientation="vertical"
-        android:clickable="true"
-        android:clipChildren="true"
-        android:clipToPadding="true"
-        android:clipToOutline="true">
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:visibility="gone"
+        android:orientation="vertical">
+    
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/phone_image"
+            android:layout_width="100dp"
+            android:layout_height="205dp"
+            android:layout_marginTop="24dp"
+            android:layout_centerHorizontal="true"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="18dp"
+            app:strokeColor="?android:attr/textColorPrimary"
+            app:strokeWidth="3dp">
+
+            <com.android.settings.preferences.ui.WallpaperView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:elevation="0dp"
+                android:contentDescription="@null"
+                android:orientation="vertical" />
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
             android:id="@+id/build_variant_title"
