--- a/res/layout/top_level_preference_toolbox_card.xml
+++ b/res/layout/top_level_preference_toolbox_card.xml
@@ -31,8 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:textColor="@color/toolbox_surface_color"
-                style="@style/sigma_text_style_h6" />
+                android:textColor="@color/top_level_preference_text_color_primary"
+                style="@style/op_control_text_style_h6" />
 
             <TextView
                 android:id="@android:id/summary"
@@ -44,7 +44,7 @@
                 android:layout_alignLeft="@android:id/title"
                 android:layout_marginTop="2.0dip"
                 android:maxLines="4"
-                android:textColor="@color/sigma_text_color_secondary" />
+                android:textColor="@color/top_level_preference_text_color_secondary" />
                 
         <LinearLayout
             android:layout_width="match_parent"
@@ -99,7 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/toolbox_surface_color"
-                    android:tint="@android:color/white"/>
+                    android:tint="@color/top_level_preference_icon_tint"/>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
