--- a/res/values/sigma_colors.xml
+++ b/res/values/sigma_colors.xml
@@ -21,7 +21,7 @@
      <color name="sigma_color_secondary_accent">@android:color/system_accent2_600</color>
      <color name="sigma_color_tertiary_accent">@android:color/system_accent3_400</color>
      <color name="sigma_color_background_accent">@android:color/system_accent2_100</color>
-     <color name="sigma_pref_ripple">#1f000000</color>
+     <color name="sigma_pref_ripple">#1f444444</color>
      <color name="sigma_pref_color">@android:color/system_neutral1_10</color>
      <color name="sigma_color_accent">@*android:color/system_accent1_600</color>
      <color name="sigma_color_accent2">@*android:color/system_accent1_400</color>
@@ -46,9 +46,9 @@
      <color name="xd_background1">@android:color/system_neutral1_50</color>
      <color name="xd_background2">@android:color/system_neutral1_100</color>
 
-     <color name="user_crd_bg">@*android:color/system_neutral1_10</color>
+     <color name="user_crd_bg">@android:color/system_neutral1_10</color>
      <color name="card_surface_color">@*android:color/system_accent2_500</color>
-     <color name="toolbox_surface_color">@*android:color/system_accent1_400</color>
+     <color name="toolbox_surface_color">@*android:color/system_accent2_500</color>
      <color name="top_level_preference_icon_tint">@*android:color/system_neutral1_1000</color>
      <color name="top_level_preference_text_color_primary">@color/top_level_preference_icon_tint</color>
      <color name="top_level_preference_text_color_secondary">@color/op_control_text_color_secondary</color>
