--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -40,13 +40,14 @@
             android:summary="@string/build_status_summary_placeholder"
             settings:enableCopying="true"
             android:order="0"
-            settings:position="solo"
+            settings:position="top"
             android:selectable="true"/>
 
          <!-- Device name -->
         <com.android.settings.widget.ValidatedEditTextPreference
             android:key="device_name"
             android:order="1"
+            settings:position="middle"
             android:icon="@drawable/ic_smartphone"
             android:title="@string/my_device_info_device_name_preference_title"
             android:summary="@string/summary_placeholder"
@@ -57,6 +58,7 @@
         <Preference
             android:key="branded_account"
             android:order="2"
+            settings:position="middle"
             android:icon="@drawable/ic_branded_account"
             android:title="@string/my_device_info_account_preference_title"
             android:summary="@string/summary_placeholder"
@@ -124,6 +126,7 @@
             android:order="32"
             android:title="@string/status_imei"
             android:icon="@drawable/ic_number"
+            settings:position="middle"
             android:summary="@string/summary_placeholder"
             settings:keywords="@string/keywords_imei_info"
             settings:enableCopying="true"
@@ -139,6 +142,7 @@
         <!-- Android version -->
         <com.android.settings.preferences.ui.AdaptivePreference
             android:key="firmware_version"
+            settings:position="top"
             android:title="@string/firmware_version"
             android:summary="@string/summary_placeholder"
             settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
@@ -197,11 +201,11 @@
         <Preference
             android:key="sleep_time"
             android:order="49"
+            settings:position="middle"
             android:title="@string/status_sleep_time"
             android:summary="@string/summary_placeholder"
-            settings:position="middle"
             android:selectable="false"/>
-
+            
         <!-- Build number -->
         <com.android.settings.preferences.ui.AdaptivePreference
             android:key="build_number"
