gestures: make pick up and lift to wake to ambient settings depend on the gesture being enabled.
Signed-off-by: Matt Filetto <matt.filetto@gmail.com>

--- a/res/xml/pick_up_gesture_settings.xml
+++ b/res/xml/pick_up_gesture_settings.xml
@@ -37,6 +37,7 @@
         android:key="doze_pick_up_gesture_ambient"
         android:title="@string/doze_gesture_ambient_title"
         android:summary="@string/doze_gesture_ambient_summary"
-        android:defaultValue="false" />
+        android:defaultValue="false"
+        android:dependency="gesture_pick_up" />
 
 </PreferenceScreen>
