--- a/res/xml/tap_screen_gesture_settings.xml
+++ b/res/xml/tap_screen_gesture_settings.xml
@@ -37,6 +37,7 @@
         android:key="doze_single_tap_gesture_ambient"
         android:title="@string/doze_gesture_ambient_title"
         android:summary="@string/doze_gesture_ambient_summary"
-        android:defaultValue="false" />
+        android:defaultValue="false"
+        android:dependency="gesture_tap" />
 
 </PreferenceScreen>
