--- a/res/values/sigma_dimens.xml
+++ b/res/values/sigma_dimens.xml
@@ -15,4 +15,7 @@
     <dimen name="rdnt_pref_vert">5.5dp</dimen>
     <dimen name="rdnt_card_radius">22dp</dimen>
     <dimen name="card_radius">20dp</dimen>
+    <dimen name="card_margin_start_aqua">20dp</dimen>
+    <dimen name="card_margin_end_aqua">20dp</dimen>
+    <dimen name="top_level_preference_summary_max_width">200dp</dimen>
 </resources>
