--- a/res/values/sigma_styles.xml
+++ b/res/values/sigma_styles.xml
@@ -30,4 +30,19 @@
         <item name="android:textStyle">normal</item>
         <item name="android:fontFamily">@*android:string/config_headlineFontFamily</item>
     </style>
+
+        <style name="op_control_text_style_base">
+        <item name="android:breakStrategy">simple</item>
+    </style>
+
+    <style name="op_control_text_style_body1" parent="@style/op_control_text_style_base">
+        <item name="android:textSize">13.0sp</item>
+        <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
+    </style>
+    
+    <style name="op_control_text_style_h6" parent="@style/op_control_text_style_base">
+        <item name="android:textSize">18.0sp</item>
+        <item name="android:fontFamily">@*android:string/config_headlineFontFamilyMedium</item>
+        <item name="android:elevation">0dp</item>
+    </style>
 </resources>
