--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -37,6 +37,7 @@
         android:icon="@drawable/ic_settings_sigma"
         android:order="-160"
         android:fragment="com.sigma.settings.SigmaSettings"
+        settings:highlightableMenuKey="@string/menu_key_sigma_toolbox"
         settings:controller="com.sigma.settings.TopLevelSigmaEntryPreferenceController" />
 
     <com.android.settings.widget.HomepagePreference
