--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -26,6 +26,7 @@
         android:summary="@string/sigma_settings_summary"
         android:order="-160"
         android:fragment="com.sigma.settings.SigmaSettings"
+        settings:highlightableMenuKey="@string/menu_key_sigma_toolbox"
         settings:controller="com.sigma.settings.TopLevelSigmaEntryPreferenceController" />
 
     <com.android.settings.widget.HomepagePreference
