--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -22,11 +22,10 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
-    <!-- Alpha logo -->
     <com.android.settingslib.widget.LayoutPreference
-        android:layout="@layout/alpha_logo"
-        android:key="alpha_logo"
-        android:selectable="false" />
+        android:key="matrixx_about"
+        android:layout="@layout/matrixx_about"
+        android:selectable="false"/>
 
     <Preference
         android:key="category_android"
@@ -43,6 +42,24 @@
         settings:searchable="false"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
 
+    <!-- Lineage version -->
+    <Preference
+        android:key="lineage_version"
+        android:title="@*lineageos.platform:string/lineage_version"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="false"
+        android:selectable="false"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/>
+
+    <!-- Matrixx maintainer  -->
+    <Preference
+        android:key="matrixx_maintainer"
+        android:title="@string/matrixx_maintainer_title"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="false"
+        android:selectable="false"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.MatrixxMaintainerPreferenceController"/>
+
     <!-- Security patch -->
     <Preference
         android:key="security_key"
@@ -51,19 +68,25 @@
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
 
+    <!-- Vendor security patch -->
     <Preference
-        android:key="category_alpha"
-        android:title="@string/category_alpha_info"
-        android:selectable="false"/>
-
-    <Preference
-        android:key="rom_build_status"
-        android:icon="@drawable/ic_build_status"
-        android:title="@string/build_status_title"
-        android:summary="@string/build_status_summary"
+        android:key="vendor_security_key"
+        android:title="@*lineageos.platform:string/lineage_vendor_security_patch"
+        android:selectable="false"
         settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmware_version.BuildStatusPreferenceController"/>
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVendorSecurityPatchLevelPreferenceController"/>
 
+    <!-- Mainline module version -->
+    <!--
+    <Preference
+        android:key="module_version"
+        android:title="@string/module_version"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.MainlineModuleVersionPreferenceController"/>
+    -->
+
+    <!-- Baseband -->
     <Preference
         android:key="rom_maintainer"
         android:icon="@drawable/ic_maintainer"
