--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -47,15 +47,6 @@
         settings:controller="com.crdroid.settings.TopLevelSettingsPreferenceController"/>
 
     <com.android.settings.widget.HomepagePreference
-        android:key="top_level_alpha_settings"
-        android:title="@string/alpha_settings_title"
-        android:summary="@string/alpha_settings_summary"
-        android:order="-204"
-        android:icon="@drawable/ic_settings_alpha"
-        android:fragment="com.alpha.settings.AlphaSettings"
-    settings:controller="com.alpha.settings.TopLevelAlphaEntryPreferenceController" />
-
-    <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.network.NetworkDashboardFragment"
         android:icon="@drawable/ic_settings_wireless"
         android:key="top_level_network"
@@ -105,9 +96,10 @@
         settings:highlightableMenuKey="@string/menu_key_display"
         settings:controller="com.android.settings.display.TopLevelDisplayPreferenceController"/>
 
-    <com.android.settings.widget.RestrictedHomepagePreference
-        android:icon="@drawable/ic_settings_wallpaper_white"
-        android:key="top_level_wallpaper"
+    <com.android.settings.widget.HomepagePreference
+        android:fragment="com.android.settings.notification.ConfigureNotificationSettings"
+        android:icon="@drawable/ic_notifications"
+        android:key="top_level_notifications"
         android:order="-120"
         android:title="@string/wallpaper_settings_title"
         android:summary="@string/wallpaper_dashboard_summary"
