--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -27,16 +27,18 @@
         android:layout="@layout/matrixx_about"
         android:selectable="false"/>
 
+    <!-- Device name -->
     <Preference
-        android:key="category_android"
-        android:title="@string/category_android_info"
-        android:selectable="false"/>
+        android:key="about_device_name"
+        android:title="@string/about_device_name"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.AboutDeviceNamePreferenceController"/>
 
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
         android:title="@string/firmware_version"
-        android:icon="@drawable/ic_android_head"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:searchable="false"
@@ -64,7 +66,6 @@
     <Preference
         android:key="security_key"
         android:title="@string/security_patch"
-        android:icon="@drawable/ic_security_patch"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
 
@@ -88,69 +89,10 @@
 
     <!-- Baseband -->
     <Preference
-        android:key="rom_maintainer"
-        android:icon="@drawable/ic_maintainer"
-        android:title="@string/maintainer_title"
-        android:summary="@string/maintainer_summary"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmware_version.MaintainerPreferenceController"/>
-
-    <!-- AlphaDroid version -->
-    <Preference
-        android:key="alpha_version"
-        android:title="@*lineageos.platform:string/lineage_version"
-        android:summary="@string/summary_placeholder"
-        android:icon="@drawable/ic_settings_alpha"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.AlphaVersionPreferenceController"/>
-
-    <!-- Build date -->
-    <Preference
-        android:key="os_build_date"
-        android:title="@*lineageos.platform:string/build_date"
-        android:summary="@string/summary_placeholder"
-        android:icon="@drawable/ic_date"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageBuildDatePreferenceController"/>
-
-    <!-- Build number-->
-    <Preference
-        android:key="os_build_number"
-        android:title="@string/build_number"
-        android:summary="@string/summary_placeholder"
-        android:icon="@drawable/ic_shell"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
-
-    <Preference
-        android:key="category_device"
-        android:title="@string/category_device_info"
-        android:selectable="false"/>
-
-    <!-- Device name -->
-    <Preference
-        android:key="about_device_name"
-        android:title="@string/about_device_name"
-        android:summary="@string/summary_placeholder"
-        android:icon="@drawable/ic_device"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.AboutDeviceNamePreferenceController"/>
-
-    <!-- SELinux -->
-    <Preference
-        android:key="selinux_status"
-        android:title="@string/selinux_status"
-        android:summary="@string/summary_placeholder"
-        android:icon="@drawable/ic_selinux"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.SELinuxStatusPreferenceController.java."/>
-
-    <!-- Baseband -->
-    <Preference
         android:key="base_band"
         android:title="@string/baseband_version"
         android:summary="@string/summary_placeholder"
-        android:icon="@drawable/ic_android"
+        android:selectable="false"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.BasebandVersionPreferenceController"/>
 
@@ -159,8 +101,25 @@
         android:key="kernel_version"
         android:title="@string/kernel_version"
         android:summary="@string/summary_placeholder"
-        android:icon="@drawable/ic_kernel"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
+
+    <!-- Build date -->
+    <Preference
+        android:key="os_build_date"
+        android:title="@*lineageos.platform:string/build_date"
+        android:summary="@string/summary_placeholder"
+        android:selectable="false"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageBuildDatePreferenceController"/>
+
+    <!-- Build -->
+    <Preference
+        android:key="os_build_number"
+        android:title="@string/build_number"
+        android:summary="@string/summary_placeholder"
+        android:selectable="false"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
 
 </PreferenceScreen>
