--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -21,19 +21,55 @@
     android:key="my_device_info_pref_screen"
     android:title="@string/about_matrixx_device">
 
-    <com.android.settingslib.widget.LayoutPreference
-        android:key="device_name"
-        android:order="-1"
-        android:selectable="false"
-        android:layout="@layout/device_info_header"
-        settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
-        settings:isPreferenceVisible="false" />
+        <com.android.settingslib.widget.LayoutPreference
+            android:key="my_device_info_header"
+            android:order="-999"
+            android:layout="@layout/about_device_info"
+            android:selectable="false"
+            settings:isPreferenceVisible="true"/>
+
+        <Preference
+            android:key="rom_build_status"
+            settings:layout="@layout/mtx_card_build_status"
+            android:order="-998"
+            settings:enableCopying="true"
+            android:selectable="true"/>
+
+        <com.android.settingslib.widget.LayoutPreference
+            android:key="my_device_hw_header"
+            android:order="-997"
+            android:layout="@layout/about_device_info_hw"
+            android:selectable="false"
+            settings:isPreferenceVisible="true"/>
 
     <PreferenceCategory
-        android:key="basic_info_category"
-        android:order="0"
+        android:key="device_detail_category"
         android:selectable="false"
         android:title="@string/my_device_info_device_details_category_title">
+
+        <!-- Device name -->
+        <com.android.settings.widget.ValidatedEditTextPreference
+            android:key="device_name"
+            android:order="15"
+            android:icon="@drawable/ic_smartphone"
+            settings:position="top"
+            android:title="@string/my_device_info_device_name_preference_title"
+            android:summary="@string/summary_placeholder"
+            settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
+            settings:enableCopying="true"/>
+
+        <!-- Model & hardware -->
+        <com.android.settings.preferences.ui.AdaptivePreference
+            android:key="device_model"
+            android:order="16"
+            android:title="@string/model_info"
+            android:icon="@drawable/ic_smartphone"
+            settings:position="middle"
+            android:summary="@string/summary_placeholder"
+            android:fragment="com.android.settings.deviceinfo.hardwareinfo.HardwareInfoFragment"
+            settings:enableCopying="true"
+            settings:keywords="@string/keywords_model_and_hardware"
+            settings:controller="com.android.settings.deviceinfo.HardwareInfoPreferenceController"/>
 
         <!-- Account name -->
         <Preference
@@ -44,22 +80,6 @@
             android:summary="@string/summary_placeholder"
             settings:enableCopying="true"
             settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>
-
-        <!-- Phone number -->
-        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
-            android:key="phone_number"
-            android:order="3"
-            android:title="@string/status_number"
-            android:summary="@string/summary_placeholder"
-            settings:isPreferenceVisible="@bool/config_show_sim_info"
-            settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"
-            settings:enableCopying="true"/>
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="device_detail_category"
-        android:selectable="false"
-        android:title="@string/my_device_info_device_details_category_title">
 
         <!-- SIM status -->
         <com.android.settings.preferences.ui.AdaptivePreference
@@ -115,6 +135,18 @@
             settings:position="middle"
             android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
             settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
+
+        <!-- Lineage version -->
+        <com.android.settings.preferences.ui.AdaptivePreference
+            android:key="lineage_os_version"
+            android:order="43"
+            android:title="@*lineageos.platform:string/lineage_version"
+            android:summary="@string/summary_placeholder"
+            android:icon="@drawable/ic_matrixx"
+            settings:position="bottom"
+            settings:enableCopying="false"
+            android:selectable="false"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/>
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -150,6 +182,24 @@
             android:summary="@string/summary_placeholder"
             settings:position="middle"
             android:selectable="false"/>
+
+        <!-- Manual -->
+        <com.android.settings.preferences.ui.AdaptivePreference
+            android:key="manual"
+            android:order="50"
+            settings:position="solo"
+            android:title="@string/manual">
+            <intent android:action="android.settings.SHOW_MANUAL"/>
+        </com.android.settings.preferences.ui.AdaptivePreference>
+
+        <!-- Device FCC equipment id -->
+        <com.android.settings.preferences.ui.AdaptivePreference
+            android:key="fcc_equipment_id"
+            android:order="52"
+            android:icon="@drawable/ic_equipment"
+            settings:position="middle"
+            android:title="@string/fcc_equipment_id"
+            android:summary="@string/summary_placeholder"/>
 
         <!-- Build number -->
         <com.android.settings.preferences.ui.AdaptivePreference
