--- a/res-ui/layout/nad_top_menu.xml
+++ b/res-ui/layout/nad_top_menu.xml
@@ -17,11 +17,11 @@
         android:layout_marginEnd="?android:attr/listPreferredItemPaddingEnd"
         android:layout_marginBottom="4dp"
         android:background="@drawable/dot_preference_background_top"
-        android:backgroundTint="?androidprv:attr/colorSurfaceHighlight"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:gravity="start|center"
         android:padding="10dp">
 
+        <!-- android:backgroundTint="?androidprv:attr/colorSurfaceHighlight" -->
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
